--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,14 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
     <div class='container' >
       <div class="encabezado">
-        <h1><%= 'DESPLIEGUE DE UNA APLICACION EN INTERNET UTILIZANDO RENDER' %></h1>
+        <h1><%= 'DESPLIEGUE DE UNA APLICACION UTILIZANDO RENDER' %></h1>
         <%= image_tag "castillo.jpg", class:'castillo-image' %>
       </div>
 
