--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,18 @@
   </head>
 
   <body>
-    <div class='container' >
-      <div class="encabezado">
-        <h1><%= 'DESPLIEGUE DE UNA APLICACION UTILIZANDO RENDER' %></h1>
-        <%= image_tag "castillo.jpg", class:'castillo-image' %>
+    <div class="row">
+      <div class="col-md-8">
+        <div class='container' >
+          <div class="encabezado">
+            <h1><%= 'DESPLIEGUE DE UNA APLICACION UTILIZANDO RENDER' %></h1>
+            <%= image_tag "castillo.jpg", class:'castillo-image' %>
+          </div>
+
+
+          <%= yield %>
+        </div>
       </div>
-
-
-      <%= yield %>
     </div>
   </body>
 </html>
