--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,14 +13,14 @@
 
 <%= form_tag(buscar_path, method: :get, class: "buscar-form") do %>
   <%= hidden_field_tag :tipo_busqueda, "nombre" %>
-  <%= label_tag :nombre, "Seleccionar Casa:" %>
+  <%= label_tag :nombre, "Seleccionar Nombre:" %>
   <%= select_tag :nombre, options_for_select(Character.pluck(:name).uniq.compact), prompt: "Todas las casas" %>
   <%= submit_tag "Buscar", class: "buscar-button-dark" %>
   <% end %>
 
 <%= form_tag(buscar_path, method: :get, class: "buscar-form") do %>
   <%= hidden_field_tag :tipo_busqueda, "locacion" %>
-  <%= label_tag :locacion, "Seleccionar Casa:" %>
+  <%= label_tag :locacion, "Seleccionar Locacion:" %>
   <%= select_tag :locacion, options_for_select(Character.pluck(:location).uniq.compact), prompt: "Todas las casas" %>
   <%= submit_tag "Buscar", class: "buscar-button-dark" %>
 <% end %>
