--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,13 @@
   </head>
 
   <body>
-    <div class="row">
-      <div class="col-md-8">
-        
+    <div class="container">
+      <div class="row">
           <div class="encabezado">
-            <h1><%= 'DESPLIEGUE DE UNA APLICACION UTILIZANDO RENDER' %></h1>
-            <%= image_tag "castillo.jpg", class:'castillo-image' %>
-          </div>
-
-
-          <%= yield %>
-        
+          <h1><%= 'DESPLIEGUE DE UNA APLICACION UTILIZANDO RENDER' %></h1>
+          <%= image_tag "castillo.jpg", class:'castillo-image' %>
+        </div>
+        <%= yield %>
       </div>
     </div>
   </body>
